objects/Deduplication_Parameters__mdt.object
<CustomObject>
    <fields>
        <fullName>Days_Threshold__c</fullName>
        <label>Days Threshold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <label>Division</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                    <default>true</default>
                    <label>A</label>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>P</fullName>
                </value>
                <value>
                    <fullName>M</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Minutes_Threshold__c</fullName>
        <label>Minutes Threshold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UBBottomDaysInMin__c</fullName>
        <label>UBBottomDaysInMin</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UBUpperDaysInMin__c</fullName>
        <label>UBUpperDaysInMin</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Deduplication Parameters</label>
    <pluralLabel>Deduplication Parameters</pluralLabel>
</CustomObject>